--- a/farmacias.html
+++ b/farmacias.html
@@ -146,7 +146,7 @@
                         <div class="row">
                             <div class="col-md-6 col-xl-12">
                                 <div class="card mb-3 widget-content bg-midnight-bloom">
-                                        <button class="mb-2 mr-2 btn-transition btn btn-outline-info">Agregar
+                                        <button class="mb-2 mr-2 btn-transition btn btn-outline-info active">Farmacias
                                         </button>
                                         <button class="mb-2 mr-2 btn-transition btn btn-outline-info">Tarjetas
                                         </button>
