--- a/pacientes.html
+++ b/pacientes.html
@@ -14,6 +14,7 @@
 <link href="./main.css" rel="stylesheet">
 <link href="./style.css" rel="stylesheet">
 
+
 </head>
 <body>
     
@@ -62,11 +63,7 @@
                                         </a>
                                         <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
                                             <button type="button" tabindex="0" class="dropdown-item">User Account</button>
-                                            <button type="button" tabindex="0" class="dropdown-item">Settings</button>
-                                            <h6 tabindex="-1" class="dropdown-header">Header</h6>
-                                            <button type="button" tabindex="0" class="dropdown-item">Actions</button>
-                                            <div tabindex="-1" class="dropdown-divider"></div>
-                                            <button type="button" tabindex="0" class="dropdown-item">Dividers</button>
+                                            <button type="button" tabindex="0" class="dropdown-item" onclick="logout()">Salir</button>
                                         </div>
                                     </div>
                                 </div>
@@ -212,6 +209,7 @@
 
 <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
@@ -231,7 +229,7 @@
     //firebase.initializeApp(firebaseConfig);
     
     firebase.initializeApp(firebaseConfig);
-  
+    const auth = firebase.auth();
 </script>
 <!-- <script src="./modal.js"></script> -->
 </body>
@@ -325,4 +323,5 @@
     </div>
 </div>
 <script type="text/javascript" src="./assets/scripts/pacientes.js"></script>
+<script type="text/javascript" src="./main_controler.js"></script>
 </html>
