--- a/test.html
+++ b/test.html
@@ -5,51 +5,19 @@
   <title>Autenticación con Firebase en 5 minutos mas</title>
 </head>
 <body>
-  <h2>Información Privada</h2>
-  
-  <div id="loginFormUI">
-    <p>Por favor inicia sesión para acceder a tu información mas</p>
-  
-    <form name="loginForm">
-      <input
-        type="email"
-        name="email"
-        placeholder="Correo Electronico"
-        required
-      />
-      <input
-        type="password"
-        name="password"
-        placeholder="Contraseña"
-        required
-      />
-      <input
-        type="radio"
-        name="isLoginOrSignup"
-        id="radioIsLogin"
-        value="isLogin"
-        checked
-      />
-      <label for="radioIsLogin">Entrar a mi cuenta</label>
 
-      <input
-        type="radio"
-        name="isLoginOrSignup"
-        id="radioIsSignup"
-        value="isSignup"
-      />
-      <label for="radioIsSignup">Crear cuenta</label>
+  <button onclick="leer()">LEER</button>
+  <button onclick="guardar()">GUARDAR</button>
+  <button onclick="borrar()">BORRAR</button>
+  <button onclick="editar()">GUARDAR DISP</button>
+  <div id="card_dispositivos"></div>
 
-      <button id="btnLogin">Acceder</button>
-    </form>
-  </div>
-  
-  <div id="privateInfo">
-    <p class="loading">Cargando...</p>
-  </div>
+
+
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.0.2/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.2/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.2/firebase-firestore.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
@@ -57,13 +25,13 @@
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyCXqJrgEF9tNtKV3zRFsidb2sagFl7hZdc",
-    authDomain: "test-std2.firebaseapp.com",
-    databaseURL: "https://test-std2.firebaseio.com",
-    projectId: "test-std2",
-    storageBucket: "test-std2.appspot.com",
-    messagingSenderId: "995987156163",
-    appId: "1:995987156163:web:5abbaa82630e76fe9a8676"
+    apiKey: "AIzaSyDoB8cc5Yf-HPLQvCCCYWCnyGtmM1ctWlA",
+    authDomain: "db-platzi-blog.firebaseapp.com",
+    databaseURL: "https://db-platzi-blog.firebaseio.com",
+    projectId: "db-platzi-blog",
+    storageBucket: "db-platzi-blog.appspot.com",
+    messagingSenderId: "725097021433",
+    appId: "1:725097021433:web:6868fa088c47220eaa4728"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
