--- a/dispositivos.html
+++ b/dispositivos.html
@@ -214,7 +214,7 @@
                             </select>
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="id_pastilla">Pastilla</label>
+                            <label for="id_pastilla_1">Pastillas</label>
                             <select name="custom-select-dip" id="id_pastilla_1" class="form-control" required="">
                                 <option>Seleccione...</option>
                                 <option>Acetaminofen</option>
@@ -224,20 +224,15 @@
                         </div>
                         
                         <div class="col-md-6 mb-3">
-                            <label for="id_pastilla_hora_1">Toma de pastillas por HORAS</label>
-                            <select name="custom-select-dip" id="id_pastilla_hora_1" class="form-control" required="">
+                            <label for="frecuencia_de_pastillas">Toma de pastillas por HORAS</label>
+                            <select name="custom-select-dip" id="frecuencia_de_pastillas" class="form-control" required="">
                                 <option>Seleccione...</option>
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
                                 <option>4</option>
-                                <option>5</option>
                                 <option>6</option>
-                                <option>7</option>
                                 <option>8</option>
-                                <option>9</option>
-                                <option>10</option>
-                                <option>11</option>
                                 <option>12</option>
                                 <option>24</option>
                                 <option>48</option>
@@ -251,12 +246,12 @@
                         </div>
 
                         <div class="col-md-6 mb-3">
-                            <label for="id_dia_1">Día</label>
-                            <input type="date" class="form-control" id="id_dia_1"  required="">
+                            <label for="dia_inicio_pastilla">Día</label>
+                            <input type="date" class="form-control" id="dia_inicio_pastilla"  required="">
                         </div>
                         <div class="col-md-6 mb-3" >
-                            <label for="id_hora_1">Hora</label>
-                            <input type="time" class="form-control" id="id_hora_1"  required="">
+                            <label for="hora_inicio_pastilla">Hora</label>
+                            <input type="time" class="form-control" id="hora_inicio_pastilla"  required="">
                         </div>
                         
                     </div>
