--- a/dispositivos.html
+++ b/dispositivos.html
@@ -216,7 +216,7 @@
                         <div class="col-md-6 mb-3">
                             <label for="id_pastilla_1">Pastillas</label>
                             <select name="custom-select-dip" id="id_pastilla_1" class="form-control" required="">
-                                <option>Seleccione...</option>
+                                <option value="" disabled selected>Seleccione...</option>
                                 <option>Acetaminofen</option>
                                 <option>Paracetamol</option>
                             </select>
@@ -226,7 +226,7 @@
                         <div class="col-md-6 mb-3">
                             <label for="frecuencia_de_pastillas">Toma de pastillas por HORAS</label>
                             <select name="custom-select-dip" id="frecuencia_de_pastillas" class="form-control" required="">
-                                <option>Seleccione...</option>
+                                <option value="" disabled selected>Seleccione...</option>
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
@@ -268,7 +268,7 @@
                         <div class="col-md-6 mb-3">
                             <label for="id_pastilla_2">Pastilla</label>
                             <select name="custom-select-dip" id="id_pastilla_2" class="form-control">
-                                <option>Seleccione...</option>
+                                <option value="" disabled selected>Seleccione...</option>
                                 <option>Acetaminofen</option>
                                 <option>Paracetamol</option>
                             </select>
@@ -278,7 +278,7 @@
                         <div class="col-md-6 mb-3">
                             <label for="id_pastilla_hora_2">Toma de pastillas por HORAS</label>
                             <select name="custom-select-dip" id="id_pastilla_hora_2" class="form-control">
-                                <option>Seleccione...</option>
+                                <option value="" disabled selected>Seleccione...</option>
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
@@ -314,14 +314,14 @@
                         <div class="col-md-12 mb-3">
                             <label for="id_contenedor_3">Contendor</label>
                             <select name="custom-select-dip" id="id_contenedor_3" class="form-control" required="" disabled>
-                                <option>2</option>
+                                <option>3</option>
                             </select>
                         </div>
                         <!-- PACIENTES TRAIDOS DE FIREBASE YA AGREGADOS -->
                         <div class="col-md-6 mb-3">
                             <label for="id_pastilla_3">Pastilla</label>
                             <select name="custom-select-dip" id="id_pastilla_3" class="form-control" >
-                                <option>Seleccione...</option>
+                                <option value="" disabled selected>Seleccione...</option>
                                 <option>Acetaminofen</option>
                                 <option>Paracetamol</option>
                             </select>
@@ -331,18 +331,13 @@
                         <div class="col-md-6 mb-3">
                             <label for="id_pastilla_hora_3">Toma de pastillas por HORAS</label>
                             <select name="custom-select-dip" id="id_pastilla_hora_3" class="form-control">
-                                <option>Seleccione...</option>
+                                <option value="" disabled selected>Seleccione...</option>
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
                                 <option>4</option>
-                                <option>5</option>
                                 <option>6</option>
-                                <option>7</option>
                                 <option>8</option>
-                                <option>9</option>
-                                <option>10</option>
-                                <option>11</option>
                                 <option>12</option>
                                 <option>24</option>
                                 <option>48</option>
@@ -377,6 +372,52 @@
         </div>
     </div>
 </div>
+
+
+<div class="modal fade bd-example-modal-lg" id="modal_dispositivo_detalle" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="ModalLabel">Detalles</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">×</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="main-card mb-3 card">
+                        <h5 id="paciente_STD" class="text-center"></h5>
+                        <div class="table-responsive">
+                            <table class="align-middle mb-0 table table-borderless table-striped table-hover">
+                                <thead>
+                                    <tr>
+                                        <th class="text-center">Contenedores</th>
+                                        <th class="text-center">Pastillas</th>
+                                        <th class="text-center">Toma cada</th>
+                                        <th class="text-center">Estado</th>
+                                        <th class="text-center">Fecha esperada</th>
+                                        <th class="text-center">Fecha Tomada</th>
+                                        <th class="text-center">Historial</th>
+
+                                    </tr>
+                                </thead>
+                                <tbody id="mostrar_detalle_dispositivo"></tbody>
+
+
+                            </table>
+                        </div>
+                       
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
 <!-- CONEXION A FIREBASE -->
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 
