--- a/dispositivos.html
+++ b/dispositivos.html
@@ -107,13 +107,21 @@
                     </div>    <div class="scrollbar-sidebar">
                         <div class="app-sidebar__inner">
                             <ul class="vertical-nav-menu">
-                                <li class="app-sidebar__heading">Dashboards</li>
+                                <li class="app-sidebar__heading" id="home_email"></li>
                                 <li>
                                     <a href="index.html">
                                         <i class="metismenu-icon pe-7s-home"></i>
                                         Dashboard
                                     </a>
                                 </li>
+
+                                <li>
+                                    <a href="enfermeras.html" >
+                                        <i class="metismenu-icon pe-7s-eyedropper"></i>
+                                        Enfermeras
+                                    </a>
+                                </li>
+
                                 <li>
                                     <a href="pacientes.html" >
                                         <i class="metismenu-icon pe-7s-users"></i>
@@ -183,7 +191,7 @@
 
 <!-- MODAL -->
 <div class="modal fade overflow-auto" id="modal_pacientes" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" style="display: none;" aria-hidden="true">
-    <div class="modal-dialog" role="">
+    <div class="modal-dialog modal-xl" role="">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="ModalLabel">Agregar Nuevo Dispositivo</h5>
