--- a/farmacias.html
+++ b/farmacias.html
@@ -111,11 +111,17 @@
                     </div>    <div class="scrollbar-sidebar">
                         <div class="app-sidebar__inner">
                             <ul class="vertical-nav-menu">
-                                <li class="app-sidebar__heading">Dashboards</li>
+                                <li class="app-sidebar__heading" id="home_email"></li>
                                 <li>
                                     <a href="index.html">
                                         <i class="metismenu-icon pe-7s-home"></i>
                                         Dashboard
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="enfermeras.html">
+                                        <i class="metismenu-icon pe-7s-eyedropper"></i>
+                                        Enfermeras
                                     </a>
                                 </li>
                                 <li>
