En el módulo de Pacientes:
Se han agregado colores al estado para una mejor visualización.
Se muestra el nombre de la enfermera asignada al paciente.
Se ha implementado una validación para evitar la edición y trabajo con pacientes inactivos, así como la desasignación de la enfermera correspondiente.
Se ha añadido un campo de entrada en el expediente para agregar notas, ordenadas por fecha.
Se ha explorado la posibilidad de añadir un buscador.
En el módulo de Enfermeras:

Se ha agregado la cantidad de pacientes asignados a cada enfermera, visible externamente.
Al editar una enfermera, se ha implementado una condición en los campos de contraseña para evitar modificaciones si están vacíos, pero se actualizarán si se ingresan nuevos datos.
Se ha mejorado la visualización del estado mediante el uso de colores.
Se ha validado que no se puedan agregar pacientes a una enfermera inactiva.
En el módulo de Dispositivos:

Se ha realizado una modificación para evitar que los pacientes ya agregados aparezcan en la lista.

--- a/enfermeras.html
+++ b/enfermeras.html
@@ -202,7 +202,6 @@
                                                 <th>Nombre</th>
                                                 <th class="text-center">Cargo</th>
                                                 <th class="text-center">Estado</th>
-                                                <th class="text-center">Cant. pacientes asignados</th>
                                                 <th class="text-center">Acción</th>
                                             </tr>
                                         </thead>
@@ -516,6 +515,7 @@
 
             <div class="col-md-12 mb-3 text-primary" style="text-align: center;">
                 <h5>PACIENTES ASIGNANDOS</h5>
+                <p id="cant_pacientes"></p>
                 <hr>
             </div>
 
