--- a/pacientes.html
+++ b/pacientes.html
@@ -205,6 +205,7 @@
                                                 <th class="text-center">Parentesco</th>
                                                 <th class="text-center">Estado</th>
                                                 <th class="text-center">Enfermera asignada</th>
+                                                <th class="text-center">Tratamiento</th>
                                                 <th class="text-center">Acción</th>
                                             </tr>
                                         </thead>
