--- a/enfermeras.html
+++ b/enfermeras.html
@@ -414,8 +414,7 @@
 
                         <div class="col-md-6 mb-3">
                             <label for="id_fecha_ingreso">Fecha de ingreso</label>
-                            <input type="date" class="form-control" id="id_fecha_ingreso" required="" min="1900-01-01"
-                                max="2022-12-12">
+                            <input type="date" class="form-control" id="id_fecha_ingreso" required="" min="1900-01-01">
                         </div>
 
                         <div class="col-md-6 mb-3">
@@ -423,7 +422,7 @@
                             <select name="custom-select-dip" id="id_turno" class="form-control">
                                 <option></option>
                                 <option>Completo (8h)</option>
-                                <option>Manana (4h)</option>
+                                <option>Mañana (4h)</option>
                                 <option>Tarde (4h)</option>
                                 <option>Noche</option>
                             </select>
