Mejoras en en cada uno de los archivos. Lo proximo es trabajar en el dispositivo

--- a/index.html
+++ b/index.html
@@ -168,7 +168,16 @@
                           </thead>
                           <tbody>
                             <tr>
-                              <td class="text-center">César Rodriguez</td>
+                              <td>
+                                <div class="widget-content p-0">
+                                  <div class="widget-content-wrapper">
+                                      <div class="widget-content-left flex2">
+                                          <div class="widget-heading" >Cesar</div>
+                                          <div class="widget-subheading opacity-7">Rodriguez</div>
+                                      </div>
+                                  </div>
+                              </div>
+                              </td>
                               <td class="text-center">1 [AZUL]</td>
                               <td class="text-center">
                                 <div class="badge badge-pill badge-warning">
@@ -230,7 +239,7 @@
                             <tr>
                               <th class="text-center">Fecha</th>
                               <th class="text-center">Paciente</th>
-                              <th class="text-center">Cantidad</th>
+                              <th class="text-center">Cant.</th>
                               <th class="text-center">Pastillas</th>
                               
                             </tr>
@@ -242,8 +251,17 @@
                                 <i class="fa fa-business-time"></i>
                                 </span> -->
                                 10/11/23 <br> 8:00 AM
-                                </td>
-                              <td class="text-center">César Rodriguez</td>
+                              </td>
+                              <td class="text-center">
+                                <div class="widget-content p-0">
+                                  <div class="widget-content-wrapper">
+                                      <div class="widget-content-left flex2">
+                                          <div class="widget-heading" >Cesar</div>
+                                          <div class="widget-subheading opacity-7">Rodriguez</div>
+                                      </div>
+                                  </div>
+                              </div>
+                              </td>
                               <td class="text-center">1</td>
                               <td class="text-center">Acetaminofén
                               </td>
@@ -399,11 +417,11 @@
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
 
+    <script src="./config.js"></script>
     <script type="text/javascript" src="./assets/scripts/main.js"></script>
     <script src="./assets/scripts/plantillas/nav_plantilla.js"></script>
     <script src="./assets/scripts/plantillas/sidebar.js"></script>
     <script src="./modal.js"></script>
-    <script src="./key.js"></script>
     <script type="text/javascript" src="./main_controler.js"></script>
   </body>
 </html>
