--- a/dispositivos.html
+++ b/dispositivos.html
@@ -23,181 +23,10 @@
     <div
       class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header"
     >
-      <div class="app-header header-shadow">
-        <div class="app-header__logo">
-          <div class="logo-src"></div>
-          <div class="header__pane ml-auto">
-            <div>
-              <button
-                type="button"
-                class="hamburger close-sidebar-btn hamburger--elastic"
-                data-class="closed-sidebar"
-              >
-                <span class="hamburger-box">
-                  <span class="hamburger-inner"></span>
-                </span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="app-header__mobile-menu">
-          <div>
-            <button
-              type="button"
-              class="hamburger hamburger--elastic mobile-toggle-nav"
-            >
-              <span class="hamburger-box">
-                <span class="hamburger-inner"></span>
-              </span>
-            </button>
-          </div>
-        </div>
-        <div class="app-header__menu">
-          <span>
-            <button
-              type="button"
-              class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav"
-            >
-              <span class="btn-icon-wrapper">
-                <i class="fa fa-ellipsis-v fa-w-6"></i>
-              </span>
-            </button>
-          </span>
-        </div>
-        <div class="app-header__content">
-          <div class="app-header-right">
-            <div class="header-btn-lg pr-0">
-              <div class="widget-content p-0">
-                <div class="widget-content-wrapper">
-                  <div class="widget-content-left">
-                    <div class="btn-group">
-                      <a
-                        data-toggle="dropdown"
-                        aria-haspopup="true"
-                        aria-expanded="false"
-                        class="p-0 btn"
-                      >
-                        <img
-                          width="42"
-                          class="rounded-circle"
-                          src="assets/images/avatars/user_icon.png"
-                          alt=""
-                        />
-                        <i class="fa fa-angle-down ml-2 opacity-8"></i>
-                      </a>
-                      <div
-                        tabindex="-1"
-                        role="menu"
-                        aria-hidden="true"
-                        class="dropdown-menu dropdown-menu-right"
-                      >
-                        <button
-                          type="button"
-                          tabindex="0"
-                          class="dropdown-item"
-                        >
-                          User Account
-                        </button>
-                        <button
-                          type="button"
-                          tabindex="0"
-                          class="dropdown-item"
-                          onclick="logout()"
-                        >
-                          Salir
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="app-header header-shadow" id="nav"></div>
 
       <div class="app-main">
-        <div class="app-sidebar sidebar-shadow">
-          <div class="app-header__logo">
-            <div class="logo-src"></div>
-            <div class="header__pane ml-auto">
-              <div>
-                <button
-                  type="button"
-                  class="hamburger close-sidebar-btn hamburger--elastic"
-                  data-class="closed-sidebar"
-                >
-                  <span class="hamburger-box">
-                    <span class="hamburger-inner"></span>
-                  </span>
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="app-header__mobile-menu">
-            <div>
-              <button
-                type="button"
-                class="hamburger hamburger--elastic mobile-toggle-nav"
-              >
-                <span class="hamburger-box">
-                  <span class="hamburger-inner"></span>
-                </span>
-              </button>
-            </div>
-          </div>
-          <div class="app-header__menu">
-            <span>
-              <button
-                type="button"
-                class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav"
-              >
-                <span class="btn-icon-wrapper">
-                  <i class="fa fa-ellipsis-v fa-w-6"></i>
-                </span>
-              </button>
-            </span>
-          </div>
-          <div class="scrollbar-sidebar">
-            <div class="app-sidebar__inner">
-              <ul class="vertical-nav-menu">
-                <li class="app-sidebar__heading" id="home_email"></li>
-                <li>
-                  <a href="index.html">
-                    <i class="metismenu-icon pe-7s-home"></i>
-                    Dashboard
-                  </a>
-                </li>
-
-                <li>
-                  <a href="enfermeras.html">
-                    <i class="metismenu-icon pe-7s-eyedropper"></i>
-                    Enfermeras
-                  </a>
-                </li>
-
-                <li>
-                  <a href="pacientes.html">
-                    <i class="metismenu-icon pe-7s-users"></i>
-                    Pacientes
-                  </a>
-                </li>
-                <li>
-                  <a href="dispositivos.html" class="mm-active">
-                    <i class="metismenu-icon pe-7s-box2"></i>
-                    Dispositivos
-                  </a>
-                </li>
-                <li>
-                  <a href="farmacias.html">
-                    <i class="metismenu-icon pe-7s-culture"></i>
-                    Farmacias
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
+        <div class="app-sidebar sidebar-shadow" id="sidebar"></div>
         <div class="app-main__outer">
           <div class="app-main__inner">
             <div class="row">
@@ -245,6 +74,7 @@
             <!-- FIN FOMULARIO AGREGAR DISPOSITIVOS -->
             <!-- <button type="button" class="mb-2 mr-2 btn-transition btn btn-outline-info" data-toggle="modal"  data-target="#modal_pastillas">Pastillas</button>  -->
 
+            <div class="row" id="card_Nodispositivo"></div>
             <div class="row" id="card_dispositivo">
               <!-- Aqui va otra tarjeta de ir -->
             </div>
@@ -254,7 +84,7 @@
     </div>
   </body>
 
-  <!-- MODAL -->
+  <!-- MODAL AGREGAR-->
   <div
     class="modal fade overflow-auto"
     id="modal_pacientes"
@@ -290,7 +120,7 @@
                 ></select>
               </div>
               <div class="col-md-6 mb-3">
-                <label for="id_paciente"
+                <label for="mac_dispositivo"
                   >MAC del dispositivo <font color="red">*</font></label
                 >
                 <input
@@ -354,7 +184,34 @@
                 />
               </div>
 
-              <div class="col-md-6 mb-3">
+              <!-- Script para que la fecha de vencimiento siempre sea mayor a hoy -->
+              <script>
+                // Obtén la fecha actual
+                var fechaActual = new Date();
+
+                // Convierte la fecha a formato yyyy-mm-dd
+                var fechaLimiteInferior = fechaActual
+                  .toISOString()
+                  .slice(0, 10);
+
+                // Establece la fecha límite inferior como el atributo 'min'
+                document.getElementById("fecha_v_1").min = fechaLimiteInferior;
+              </script>
+
+              <div class="col-md-4 mb-3">
+                <label for="cant_caps_toma_1"
+                  >Cantidad de cápsulas por toma <font color="red">*</font></label
+                >
+                <input
+                  type="number"
+                  class="form-control"
+                  required=""
+                  placeholder="Dias"
+                  id="cant_caps_toma_1"
+                />
+              </div>
+
+              <div class="col-md-4 mb-3">
                 <label for="frecuencia_de_pastillas_1"
                   >Toma de pastillas cada X horas
                   <font color="red">*</font></label
@@ -374,11 +231,10 @@
                   <option>8</option>
                   <option>12</option>
                   <option>24</option>
-                  <option>48</option>
                 </select>
               </div>
 
-              <div class="col-md-6 mb-3">
+              <div class="col-md-4 mb-3">
                 <label for="t_tratamiento_1"
                   >Tiempo del tratamiento <font color="red">*</font></label
                 >
@@ -406,6 +262,22 @@
                   required=""
                 />
               </div>
+
+              <!-- Script para que la fecha sea siempre sea mayor a hoy -->
+              <script>
+                // Obtén la fecha actual
+                var fechaActual = new Date();
+
+                // Convierte la fecha a formato yyyy-mm-dd
+                var fechaLimiteInferior = fechaActual
+                  .toISOString()
+                  .slice(0, 10);
+
+                // Establece la fecha límite inferior como el atributo 'min'
+                document.getElementById("dia_inicio_pastilla").min =
+                  fechaLimiteInferior;
+              </script>
+
               <div class="col-md-6 mb-3">
                 <label for="hora_inicio_pastilla"
                   >Hora <font color="red">*</font></label
@@ -492,7 +364,6 @@
                   <option>8</option>
                   <option>12</option>
                   <option>24</option>
-                  <option>48</option>
                 </select>
               </div>
 
@@ -613,7 +484,6 @@
                   <option>8</option>
                   <option>12</option>
                   <option>24</option>
-                  <option>48</option>
                 </select>
               </div>
 
@@ -674,6 +544,80 @@
               </button>
             </div>
           </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- MODASL MOSTRAR PASTILLAS -->
+  <!-- MODAL -->
+  <div
+    class="modal fade overflow-auto"
+    id="modal_pastillas"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="ModalLabel"
+    style="display: none"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog modal-xl" role="">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="ModalLabel">Pastillas</h5>
+          <button
+            type="button"
+            class="close"
+            data-dismiss="modal"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="input-group mb-3">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Buscar pastillas"
+              id="search_pastillas"
+              oninput="searchPastillas()"
+            />
+            <button
+              class="btn btn-outline-secondary"
+              data-toggle="modal"
+              data-target="#agregar_pastillas"
+              type="button"
+            >
+              Agregar
+            </button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table table-bordered">
+                <thead>
+                  <tr>
+                    <th>Nombre</th>
+                    <th>Miligramos</th>
+                    <th>Descripción</th>
+                  </tr>
+                </thead>
+                <tbody
+                  class="table_pastillas"
+                  8
+                  mn
+                  id="table_body_pastillas"
+                ></tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">
+            Cerrar
+          </button>
         </div>
       </div>
     </div>
@@ -753,79 +697,6 @@
   </div>
 
   <!-- FIN MODAL AGREGAR PASTILLAS -->
-  <!-- MODASL MOSTRAR PASTILLAS -->
-  <!-- MODAL -->
-  <div
-    class="modal fade overflow-auto"
-    id="modal_pastillas"
-    tabindex="-1"
-    role="dialog"
-    aria-labelledby="ModalLabel"
-    style="display: none"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog modal-xl" role="">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="ModalLabel">Pastillas</h5>
-          <button
-            type="button"
-            class="close"
-            data-dismiss="modal"
-            aria-label="Close"
-          >
-            <span aria-hidden="true">×</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="input-group mb-3">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Buscar pastillas"
-              id="search_pastillas"
-              oninput="searchPastillas()"
-            />
-            <button
-              class="btn btn-outline-secondary"
-              data-toggle="modal"
-              data-target="#agregar_pastillas"
-              type="button"
-            >
-              Agregar
-            </button>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-body">
-            <div class="table-responsive">
-              <table class="table table-bordered">
-                <thead>
-                  <tr>
-                    <th>Nombre</th>
-                    <th>Miligramos</th>
-                    <th>Descripción</th>
-                  </tr>
-                </thead>
-                <tbody
-                  class="table_pastillas"
-                  8
-                  mn
-                  id="table_body_pastillas"
-                ></tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">
-            Cerrar
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <script>
     function searchPastillas() {
@@ -912,31 +783,13 @@
   <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
 
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-
-  <script>
-    // Your web app's Firebase configuration
-    var firebaseConfig = {
-      apiKey: "AIzaSyCXqJrgEF9tNtKV3zRFsidb2sagFl7hZdc",
-      authDomain: "test-std2.firebaseapp.com",
-      databaseURL: "https://test-std2.firebaseio.com",
-      projectId: "test-std2",
-      storageBucket: "test-std2.appspot.com",
-      messagingSenderId: "995987156163",
-      appId: "1:995987156163:web:02b36dc84092711d9a8676",
-    };
-    // Initialize Firebase
-    //firebase.initializeApp(firebaseConfig);
-
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-  </script>
+  <script src="./config.js"></script>
   <script type="text/javascript" src="./main_controler.js"></script>
   <script type="text/javascript" src="./assets/scripts/main.js"></script>
+  <script src="./assets/scripts/plantillas/nav_plantilla.js"></script>
+  <script src="./assets/scripts/plantillas/sidebar.js"></script>
   <script
     type="text/javascript"
     src="./assets/scripts/dispositivos.js"
   ></script>
-
 </html>
